--- a/magic/index.html
+++ b/magic/index.html
@@ -25,6 +25,7 @@
     <div id="life-set">
         Select your starting life value:
         <br><input type="number" name="lives" id="lives" value="20" step="10" min="10" max="40">
+        <!-- change input to a selector for better UX -->
         <div id="difficulty">standard mode</div>
     </div>
 
