--- a/index.html
+++ b/index.html
@@ -47,16 +47,7 @@
 
             </div>
         </nav>
-        <!-- <nav class="nav">
-            <div class="col-xs-8 pull-right text-right">
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/sloutrel" target="_blank"><i
-                                class="fab fa-linkedin"></i>LinkedIn</a>
-                    </li>
-                    <li><a href="https://github.com/sloutrel"><i class="fab fa-github"></i>GitHub</a></li>
 
-                </ul>
-        </nav> -->
         <h1>Sarah's Portfolio:</h1>
         <h2>hey mom, look at the things I made!</h2>
 
@@ -88,7 +79,7 @@
                             sided
                             die.</p>
                         <div class="card-footer">
-                            <a href="#" class="btn card-btn">Go keep some scores</a>
+                            <a href="https://sloutrel.github.io/magic" class="btn card-btn">Go keep some scores</a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +93,7 @@
                         <p class="card-text">Don't know how to pair styles? Neither does this app. Generate random
                             style combos here.</p>
                         <div class="card-footer">
-                            <a href="#" class="btn card-btn">Randomize</a>
+                            <a href="https://sloutrel.github.io/style_randomizer" class="btn card-btn">Randomize</a>
                         </div>
                     </div>
                 </div>
