fix broken link

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                             sided
                             die.</p>
                         <div class="card-footer">
-                            <a href="https://sloutrel.github.io/magic" class="btn card-btn">Go keep some scores</a>
+                            <a href="https://sloutrel.github.io/magic" target="_blank" class="btn card-btn mtg">Go keep
+                                some scores</a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +94,8 @@
                         <p class="card-text">Don't know how to pair styles? Neither does this app. Generate random
                             style combos here.</p>
                         <div class="card-footer">
-                            <a href="https://sloutrel.github.io/style_randomizer" class="btn card-btn">Randomize</a>
+                            <a href="https://sloutrel.github.io/style_randomizer" target="_blank"
+                                class="btn card-btn rand">Randomize</a>
                         </div>
                     </div>
                 </div>
