--- a/museum-of-cats/index.html
+++ b/museum-of-cats/index.html
@@ -28,7 +28,7 @@
   <body>
     <nav
       id="mainNavbar"
-      class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
+      class="navbar navbar-dark navbar-expand-sm py-0 fixed-top"
     >
       <a href="https://sloutrel.github.io/" target="_blank" class="navbar-brand"
         >CATS
@@ -46,7 +46,7 @@
             <a href="#" class="nav-link">HOME</a>
           </li>
           <li class="nav-item">
-            <a href="https://sloutrel.github.io/" class="nav-link">ABOUT</a>
+            <a href="about.html" class="nav-link">ABOUT</a>
           </li>
           <li class="nav-item">
             <a href="photos.html" class="nav-link">PHOTOS</a>
@@ -114,7 +114,7 @@
         <div class="col-md-6 text-center">
           <div class="row justify-content-center">
             <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-              <h2>MUSEUM OF CANDY</h2>
+              <h2>MUSEUM OF CATS</h2>
               <p class="lead">
                 Cough furball i cry and cry and cry unless you pet me, and then
                 maybe i cry just for fun carefully drink from water glass and
