--- a/museum-of-cats/photos.html
+++ b/museum-of-cats/photos.html
@@ -28,7 +28,7 @@
   <body>
     <nav
       id="mainNavbar"
-      class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
+      class="navbar navbar-dark navbar-expand-sm py-0 fixed-top"
     >
       <a href="https://sloutrel.github.io/" target="_blank" class="navbar-brand"
         >CATS
@@ -46,7 +46,7 @@
             <a href="index.html" class="nav-link">HOME</a>
           </li>
           <li class="nav-item">
-            <a href="https://sloutrel.github.io/" class="nav-link">ABOUT</a>
+            <a href="about.html" class="nav-link">ABOUT</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">PHOTOS</a>
