--- a/index.html
+++ b/index.html
@@ -74,15 +74,14 @@
             </div>
             <div class="col-sm">
                 <div class="card mx-auto " style="width: 18rem;">
-                    <img src="https://miro.medium.com/max/6000/1*9KGea1STTglY4ZqVHvTAfg.png" class="card-img-top"
+                    <img src="https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=752&q=80" class="card-img-top"
                         alt="random img">
                     <div class="card-body">
-                        <h5 class="card-title">Styles Generator</h5><br>
-                        <p class="card-text">Don't know how to pair styles? Neither does this app. Generate random
-                            style combos here.</p>
+                        <h5 class="card-title">Vanilla JS/CSS ToDo List</h5><br>
+                        <p class="card-text">Is life getting too crazy to keep up? Don't worry about it! Just add it to a list and everything will be okay.</p>
                         <div class="card-footer">
-                            <a href="https://sloutrel.github.io/style_randomizer" target="_blank"
-                                class="btn card-btn rand">Randomize</a>
+                            <a href="https://sloutrel.github.io/todo" target="_blank"
+                                class="btn card-btn rand">Let's get to Listin'</a>
                         </div>
                     </div>
                 </div>
@@ -97,6 +96,21 @@
                         <div class="card-footer">
                             <a href="https://sloutrel.github.io/museum-of-cats" target="_blank"
                                 class="btn card-btn ">Meow</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card mx-auto " style="width: 18rem;">
+                    <img src="https://miro.medium.com/max/6000/1*9KGea1STTglY4ZqVHvTAfg.png" class="card-img-top"
+                        alt="random img">
+                    <div class="card-body">
+                        <h5 class="card-title">Styles Generator</h5><br>
+                        <p class="card-text">Don't know how to pair styles? Neither does this app. Generate random
+                            style combos here.</p>
+                        <div class="card-footer">
+                            <a href="https://sloutrel.github.io/style_randomizer" target="_blank"
+                                class="btn card-btn rand">Randomize</a>
                         </div>
                     </div>
                 </div>
