--- a/about-me.html
+++ b/about-me.html
@@ -42,7 +42,7 @@
 
             </div>
         </nav>
-<header>
+<header id="h-portfolio">
         <h1>Sarah's Portfolio:</h1>
         <h2>Look, I learned some things!</h2>
 
@@ -83,6 +83,16 @@
             </ul>
         </div>
     </div>
+</div>
+<br><hr>
+<div class="container trophies-container">
+    <h3 class="trophies">Also, check out my sweet trophies (more to come):</h3>
+    <ul class="list-group trophies-list">
+        <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/javascript-algorithms-and-data-structures" target ="_blank">Javascript Algorithms and Data Stuctures - FCC</a>
+        </li>
+        <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/responsive-web-design" target ="_blank">Responsive Web Design - FCC</a>
+        </li>
+    </ul>
 </div>
 <script src="app.js"></script>
 <script
