--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     </div>
     <div class="container-fluid content-row cardrow">
         <div class="row">
+            <div class="card-group">
+           
             <div class="col-sm">
                 <div class="card mx-auto" style="width: 18rem;">
                     <img src="https://www.cruiseplanners.com/static/imago/5556/magic_banner-1000x2821.jpg"
@@ -68,6 +70,19 @@
                         <div class="card-footer">
                             <a href="https://sloutrel.github.io/magic" target="_blank" class="btn card-btn mtg">Go keep
                                 some scores</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card mx-auto" style="width: 18rem;">
+                    <img src="https://images.unsplash.com/photo-1580519542036-c47de6196ba5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80"
+                        class="card-img-top" alt="expense-list img">
+                    <div class="card-body">
+                        <h5 class="card-title">Basic Expense List using React</h5>
+                        <p class="card-text">Have you spent your hard earned money on too much rent? Is your boba habit getting out of control?</p>
+                        <div class="card-footer">
+                            <a href="https://sloutrel.github.io/expense-list" target="_blank" class="btn card-btn expense">See the damage.</a>
                         </div>
                     </div>
                 </div>
@@ -116,7 +131,7 @@
                 </div>
             </div>
         </div>
-
+    </div>
 </main>
         <script src="app.js"></script>
         <script
