add react task list to page

--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
             </div>
             <div class="col-sm">
                 <div class="card mx-auto " style="width: 18rem;">
+                    <img src="https://images.unsplash.com/photo-1536860484431-7615d914eac1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" class="card-img-top"
+                        alt="random img">
+                    <div class="card-body">
+                        <h5 class="card-title">Simple React Task List</h5><br>
+                        <p class="card-text">Have you always wanted to be a Taskmaster? Unleash your inner type-A, micromanger self today!</p>
+                        <div class="card-footer">
+                            <a href="https://sloutrel.github.io/task-list" target="_blank"
+                                class="btn card-btn rand">Task me up, baby!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card mx-auto " style="width: 18rem;">
                     <img src="https://images.unsplash.com/photo-1442291928580-fb5d0856a8f1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80" class="card-img-top"
                         alt="random img">
                     <div class="card-body">
