update landing with mtg react

--- a/about-me.html
+++ b/about-me.html
@@ -58,8 +58,9 @@
             </ul>
         </div>
         <div class="col-4 col-md-3 mx-auto">
-            <h3 class="learning-categories text-center">Frameworks</h3>
+            <h3 class="learning-categories text-center">Frameworks / Libraries</h3>
              <ul class="list-group">
+                <li class="list-group-item">React</li>
                 <li class="list-group-item">Express</li>
                 <li class="list-group-item">Bootstrap</li>  
             </ul>
@@ -72,14 +73,14 @@
                 <li class="list-group-item">Axios</li>
                 <li class="list-group-item">VS Code</li>
                 <li class="list-group-item">EJS</li>
-                <li class="list-group-item">Github</li>
+                <li class="list-group-item">Git & Github</li>
             </ul>
         </div>
         <div class="col-4-lg col-md-3 mx-auto">
             <h3 class="learning-categories text-center">Currently learning</h3>
             <ul class="list-group"> 
                 <li class="list-group-item">Mongo DB</li>
-                <li class="list-group-item">React</li>
+                
             </ul>
         </div>
     </div>
