--- a/index.html
+++ b/index.html
@@ -57,16 +57,29 @@
     <div class="container-fluid content-row cardrow">
         <div class="row">
             <div class="card-group">
-           
+                <div class="col-sm">
+                    <div class="card mx-auto" style="width: 18rem;">
+                        <img src="https://www.cruiseplanners.com/static/imago/5556/magic_banner-1000x2821.jpg"
+                            class="card-img-top" alt="magic the gathering img">
+                        <div class="card-body">
+                            <h5 class="card-title">Magic the Gathering Score Keeper - React</h5>
+                            <p class="card-text">New and enhanced. Fight all the Kevin's until only you survive. Still without that pesky 20
+                                sided die.</p>
+                            <div class="card-footer">
+                                <a href="https://sloutrel.github.io/magic-react" target="_blank" class="btn card-btn mtg">Enter the battlefield
+                                    </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             <div class="col-sm">
                 <div class="card mx-auto" style="width: 18rem;">
-                    <img src="https://www.cruiseplanners.com/static/imago/5556/magic_banner-1000x2821.jpg"
+                    <img src="https://seller.tcgplayer.com/media/2439/magic_media_slider_042018-2x.jpg"
                         class="card-img-top" alt="magic the gathering img">
                     <div class="card-body">
                         <h5 class="card-title">Magic the Gathering Score Keeper</h5>
                         <p class="card-text">Choose your life count and keep score easily without that pesky 20
-                            sided
-                            die.</p>
+                            sided die.</p>
                         <div class="card-footer">
                             <a href="https://sloutrel.github.io/magic" target="_blank" class="btn card-btn mtg">Go keep
                                 some scores</a>
