--- a/about-me.html
+++ b/about-me.html
@@ -53,34 +53,36 @@
             <h3 class="learning-categories text-center">Languages</h3>
             <ul class="list-group">
                 <li class="list-group-item">Javascript</li>
-                <li class="list-group-item">HTML</li>
-                <li class="list-group-item">Responsive CSS</li>
+                <li class="list-group-item">HTML5</li>
+                <li class="list-group-item">Responsive CSS3</li>
             </ul>
         </div>
         <div class="col-4 col-md-3 mx-auto">
             <h3 class="learning-categories text-center">Frameworks / Libraries</h3>
              <ul class="list-group">
                 <li class="list-group-item">React</li>
-                <li class="list-group-item">Express</li>
+                <li class="list-group-item">Express & EJS</li>
                 <li class="list-group-item">Bootstrap</li>  
+                <li class="list-group-item">Node.js & npm</li>
             </ul>
         </div>
         <div class="col-4 col-md-3 mx-auto">
             <h3 class="learning-categories text-center">Other tools</h3>
             <ul class="list-group">  
-                <li class="list-group-item">Node.js & npm</li>
-                <li class="list-group-item">Postman</li>
-                <li class="list-group-item">Axios</li>
                 <li class="list-group-item">VS Code</li>
-                <li class="list-group-item">EJS</li>
+                <li class="list-group-item">Mongo DB / Atlas</li>
                 <li class="list-group-item">Git & Github</li>
+                <li class="list-group-item">Sass</li>
+                <li class="list-group-item">Heroku</li>
+                <li class="list-group-item">Agile / Scrum</li>
+                <li class="list-group-item">Authentication - Hashing & Salting</li>
             </ul>
         </div>
         <div class="col-4-lg col-md-3 mx-auto">
             <h3 class="learning-categories text-center">Currently learning</h3>
             <ul class="list-group"> 
-                <li class="list-group-item">Mongo DB</li>
-                
+                <li class="list-group-item">Typescript</li>
+                <li class="list-group-item">Postman</li>
             </ul>
         </div>
     </div>
@@ -89,6 +91,8 @@
 <div class="container trophies-container">
     <h3 class="trophies">Also, check out my sweet trophies (more to come):</h3>
     <ul class="list-group trophies-list">
+        <li><a href="https://www.udemy.com/certificate/UC-33e37863-dee4-4453-a44f-5105b368f1b5/" target ="_blank">Web Dev Bootcamp 2021 - Udemy</a>
+        </li>
         <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/javascript-algorithms-and-data-structures" target ="_blank">Javascript Algorithms and Data Stuctures - FCC</a>
         </li>
         <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/responsive-web-design" target ="_blank">Responsive Web Design - FCC</a>
