add cert, grammar correction

--- a/about-me.html
+++ b/about-me.html
@@ -97,6 +97,8 @@
         </li>
         <li><a href="https://www.freecodecamp.org/certification/fcc439a53fa-b2b5-441b-88e8-4a48047a48f5/responsive-web-design" target ="_blank">Responsive Web Design - FCC</a>
         </li>
+        <li><a href="https://www.udemy.com/certificate/UC-adbe38b5-927d-4145-b313-839401ae5d24/" target ="_blank">Agile Scrum Mastery - Udemy</a>
+        </li>
     </ul>
 </div>
 <script src="app.js"></script>
