--- a/index.html
+++ b/index.html
@@ -44,12 +44,8 @@
             <div class="container-fluid">
                 <p>Hi! I'm Sarah. </p><br>
                 <p>I started my coding journey when I was in elementary school learning basic html (thanks Dad!) but
-                    that's pretty much where it stopped until 2020 when I pushed myself to pick it back up again. I
-                    still
-                    have a
-                    long way to go. This is my victory page where I put all the cool (and sometimes not so cool) things
-                    I've
-                    made.
+                    that's pretty much where it stopped until 2020 when I pushed myself to pick it back up again, but I
+                    still have a long way to go. This is my victory page where I put all the cool (and sometimes not so cool) things I've made.
                 </p>
         </div>
     </div>
